	* configs/freedom-lk25z/src/kl_spi.c:  Add the framework for
	  controlling SPI-related discrete inputs and outputs.  Taken from
	  work by Alan Carvalho de Assis (2013-6-20).
	* arch/arm/src/kl/kl_dumpgpio.c:  Now compiles (2013-6-20).
	* configs/:  Several defconfig files were changed that had 
	  CONFIG_HAVE_CXXINITIALIZE=y.  Because of recent changes to
	  apps/examples, these configurations may need to have
	  CONFIG_EXAMPLES_NSH_CXXINITIALIZE=y so that they behave as they did
	  before, i.e., so that C++ initializers will be called when NSH starts
	  up (2013-6-21).
	* configs/sam4l-xplained/src/sam_slcd.c:  Beginning of a driver for the
	  LED1 segment LCD module.  This driver is incomplete on initial check-
	  in (2013-6-21).
	* drivers/net/enc28j60.c:  Change buffer ordering to work around Errata
	  #5.  From Dave (ziggurat29, 2013-6-22).
	* configs/sam4l-xplained/src/sam_slcd.c:  LED1 segment LCD module is now
	  functional (2013-6-23).
	* drivers/lcd/ssd1306.c and include/nuttx/lcd/ssd1306.h.  Renamed
	  ug-2864hsweg01.c and .h to ssd1306.c and .h.  Extended to support the
	  UG-2832HSWEG04 which is very similar and also based on the SSD1306
	  controller (2013-6-23).
	* configs/sam4l-xplained/src/sam_ug2832hsweg04.c: Add support for the
	  UG-2832HSWEG04 OLED on the SAM4L Xplained Pro's OLED1 module
	  (2013-6-23).
	* include/debug.h:  Added macro DEBUGPANIC for forces crashes when debug
	  is enabled.
	* drivers/lcd/ssd1306.c:  Driver now appears to be function for the
	  UG-2832HSWEG04 in landscape mode (2013-6-24).
	* drivers/lcd/ug-2864ambag01.c and ug-9664hswag01.c:  Add/updated
	  support for reverse portrait mode from lessons learned with the
	  UG-2832HSWEG04.  Untested changes! (2013-6-24).
	* arch/arm/src/stm32/stm32_ccm.c and .h:  Add support for a seperate CCM
	  heap.  This may be useful for segregating allocations for CCM (which
	  cannot be used for DMA) for other allocations (that may be used used
	  for DMA) (2013-6-25).